import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
import { 
  IsEmail, 
  IsNotEmpty, 
  IsString, 
  IsUUID, 
  IsOptional, 
  MinLength,
  IsUrl,
  IsPhoneNumber,
  Length,
  IsIn,
  IsArray,
} from 'class-validator';


const ALLOWED_ORG_TYPES = [
  'PRIVATE_LIMITED', 
  'NGO', 
  'SOLE_PROPRIETORSHIP', 
  'GOVERNMENT', 
  'PARTNERSHIP'
];

/* ======================================================
   1. ORGANISATION SIGNUP REQUEST (AUTH SERVICE)
   - Used for the public-facing signup API.
   - Includes Password but NO adminUserUuid.
====================================================== */

export class OrganisationSignupRequestDto {
  // --- ORGANIZATION DETAILS ---
  @ApiProperty({
    description: 'The registered legal name of the business or organization',
    example: 'Pivota Tech Solutions',
    minLength: 3,
  })
  @IsString()
  @IsNotEmpty()
  @MinLength(3)
  name!: string;
  

  @ApiProperty({
    description: 'General contact email for the business entity',
    example: 'info@pivotatech.co.ke',
  })
  @IsEmail()
  @IsNotEmpty()
  officialEmail!: string;

  @ApiProperty({
    description: 'General company contact number (International format)',
    example: '+254201234567',
  })
  @IsNotEmpty()
  @IsPhoneNumber(undefined, { message: 'Invalid official company phone number' })
  officialPhone!: string;

  @ApiProperty({
    description: 'Physical location or headquarters of the organization',
    example: 'Waiyaki Way, Nairobi, Kenya',
  })
  @IsString()
  @IsNotEmpty()
  physicalAddress!: string;

  // --- ADMIN ACCOUNT DETAILS ---
  @ApiProperty({
    description: 'Login email for the organization admin. This will be the primary identity.',
    example: 'admin@pivotatech.co.ke',
  })
  @IsEmail()
  @IsNotEmpty()
  email!: string;

  @ApiProperty({
    description: 'Secure password for the admin account',
    example: 'StrongPass@123',
    minLength: 8,
  })
  @IsString()
  @IsNotEmpty()
  @MinLength(8)
  password!: string;

  @ApiProperty({
    description: 'International phone number for the admin.',
    example: '+254711222333',
  })
  @IsNotEmpty()
  @IsPhoneNumber(undefined, { 
    message: 'Phone number must be valid and include a country code (e.g., +254...)' 
  })
  phone!: string;

  @ApiProperty({ description: 'Admin legal first name', example: 'John' })
  @IsString()
  @IsNotEmpty()
  adminFirstName!: string;

  @ApiProperty({ description: 'Admin legal last name', example: 'Doe' })
  @IsString()
  @IsNotEmpty()
  adminLastName!: string;

  @ApiProperty({
    description: '6-digit OTP verification code sent to the admin email',
    example: '123456',
    minLength: 6,
    maxLength: 6
  })
  @IsString()
  @Length(6, 6, { message: 'Verification code must be exactly 6 digits' })
  @IsNotEmpty()
  code!: string;

  @ApiProperty({
    description: 'The legal structure of the organization',
    enum: ALLOWED_ORG_TYPES,
    example: 'PRIVATE_LIMITED',
  })
  @IsNotEmpty()
  @IsString()
  @IsIn(ALLOWED_ORG_TYPES, {
    message: `organizationType must be one of: ${ALLOWED_ORG_TYPES.join(', ')}`
  })
  organizationType!: string;

  @ApiPropertyOptional({
    description: 'Target subscription plan. If not the free-plan, signup will return a payment redirect.',
    example: 'org-premium-tier',
    default: 'free-plan'
  })
  @IsOptional()
  @IsString()
  planSlug?: string; 
}

/* ======================================================
   2. CREATE ORGANISATION REQUEST (ORGANISATION SERVICE)
   - Used for internal gRPC/Service communication.
   - Includes adminUserUuid but NO Password.
====================================================== */
export class CreateOrganisationRequestDto {
  // --- Organization Identity ---
  @ApiProperty({
    description: 'The registered legal name of the business or organization',
    example: 'Pivota Tech Solutions',
  })
  @IsString()
  @IsNotEmpty()
  @MinLength(3)
  name!: string;

  @ApiProperty({
    description: 'General contact email for the business entity',
    example: 'info@pivotatech.co.ke',
  })
  @IsEmail()
  @IsNotEmpty()
  officialEmail!: string;

  @ApiProperty({
    description: 'General company contact number',
    example: '+254201234567',
  })
  @IsNotEmpty()
  @IsPhoneNumber(undefined)
  officialPhone!: string;

  @ApiProperty({
    description: 'Physical location of the primary business office',
    example: 'Waiyaki Way, Nairobi, Kenya',
  })
  @IsString()
  @IsNotEmpty()
  physicalAddress!: string;

  // --- Admin Mapping ---
  @ApiProperty({
    description: 'The UUID pre-generated by Auth Service to anchor identity',
    example: 'd9b2b1c0-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  adminUserUuid!: string;

  @ApiProperty({
    description: 'Login email for the admin (to populate the User table)',
    example: 'admin@pivotatech.co.ke',
  })
  @IsEmail()
  @IsNotEmpty()
  email!: string;

  @ApiProperty({ 
    description: 'Admin phone number', 
    example: '+254711222333' 
  })
  @IsPhoneNumber(undefined)
  @IsNotEmpty()
  phone!: string;

  @ApiProperty({ description: 'Admin first name', example: 'John' })
  @IsString()
  @IsNotEmpty()
  adminFirstName!: string;

  @ApiProperty({ description: 'Admin last name', example: 'Doe' })
  @IsString()
  @IsNotEmpty()
  adminLastName!: string;

  @ApiProperty({
    description: 'The type of organization',
    example: 'PRIVATE_LIMITED',
  })
  @IsNotEmpty()
  @IsString()
  @IsIn(ALLOWED_ORG_TYPES)
  organizationType!: string;

  @ApiPropertyOptional({
    description: 'The subscription plan for the organization',
    example: 'free-plan',
  })
  @IsString()
  planSlug!: string;
}

/* ======================================================
   3. UPDATE ORGANISATION PROFILE REQUEST
====================================================== */
export class UpdateOrgProfileRequestDto {
  @ApiPropertyOptional({ 
    description: 'Official company website URL',
    example: 'https://pivotatech.co.ke' 
  })
  @IsOptional()
  @IsUrl()
  website?: string;

  @ApiPropertyOptional({ 
    description: 'Government-issued business registration number',
    example: 'PVT-REG-001' 
  })
  @IsOptional()
  @IsString()
  registrationNo?: string;

  @ApiPropertyOptional({ 
    description: 'Kenya Revenue Authority Personal Identification Number (KRA PIN)',
    example: 'P051234567X' 
  })
  @IsOptional()
  @IsString()
  kraPin?: string;

  @ApiPropertyOptional({ 
    description: 'Physical location of the primary business office',
    example: 'Nairobi, Kenya' 
  })
  @IsOptional()
  @IsString()
  physicalAddress?: string;

  @ApiPropertyOptional({ 
    description: 'Update the legal structure',
    enum: ALLOWED_ORG_TYPES 
  })
  @IsOptional()
  @IsString()
  @IsIn(ALLOWED_ORG_TYPES)
  organizationType?: string;
}

/* ======================================================
   4. ADD ORGANISATION MEMBER REQUEST (Direct Link)
   - Used for directly adding an existing user to an organization
====================================================== */
export class AddOrgMemberRequestDto {
  @ApiProperty({
    description: 'Global identifier of the organization',
    example: 'd9b2b1c0-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  orgUuid!: string;

  @ApiProperty({
    description: 'UUID of the user being added to the organization',
    example: 'a7164466-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  userUuid!: string;
}

/* ======================================================
   5. INVITE MEMBER REQUEST (Email-Based Invitation)
   - Public DTO used by the Gateway API
   - Admin does NOT specify role - system assigns 'GeneralUser' internally
====================================================== */
export class InviteMemberRequestDto {
  @ApiProperty({
    description: 'The email address of the person being invited',
    example: 'colleague@example.com',
  })
  @IsEmail()
  @IsNotEmpty()
  email!: string;

  @ApiPropertyOptional({
    description: 'Optional personal message to include in the invitation email',
    example: 'Please join our team as we expand!',
  })
  @IsOptional()
  @IsString()
  message?: string;
}

/* ======================================================
   6. INVITE MEMBER GRPC REQUEST (Profile Service)
   - Internal gRPC DTO used between Gateway and Profile Service
   - Extends the public DTO and adds fields extracted from JWT
====================================================== */
export class InviteMemberGrpcRequestDto extends InviteMemberRequestDto {
  @ApiProperty({
    description: 'UUID of the organization (extracted from JWT context)',
    example: 'd9b2b1c0-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  organizationUuid!: string;

  @ApiProperty({
    description: 'UUID of the admin sending the invitation (extracted from JWT)',
    example: 'a7164466-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  invitedByUserUuid!: string;
}

/* ======================================================
   7. ACCEPT INVITATION REQUEST
   - Public DTO used when a user clicks the invitation link
====================================================== */
export class AcceptInvitationRequestDto {
  @ApiProperty({
    description: 'The unique secret token sent to the users email',
    example: '550e8400-e29b-41d4-a716-446655440000',
  })
  @IsString()
  @IsNotEmpty()
  token!: string;

  @ApiPropertyOptional({
    description: 'First name (required for new users)',
    example: 'Jane',
  })
  @IsOptional()
  @IsString()
  firstName?: string;

  @ApiPropertyOptional({
    description: 'Last name (required for new users)',
    example: 'Smith',
  })
  @IsOptional()
  @IsString()
  lastName?: string;

  @ApiPropertyOptional({
    description: 'Phone number (required for new users)',
    example: '+254712345678',
  })
  @IsOptional()
  @IsPhoneNumber(undefined)
  phone?: string;
}

/* ======================================================
   8. ACCEPT INVITATION GRPC REQUEST (Profile Service)
   - Internal gRPC DTO for accepting invitations
====================================================== */
export class AcceptInvitationGrpcRequestDto extends AcceptInvitationRequestDto {
  // No additional fields needed - token and user details are sufficient
}

/* ======================================================
   9. VERIFY INVITATION REQUEST
   - Used to check if an invitation token is valid
====================================================== */
export class VerifyInvitationRequestDto {
  @ApiProperty({
    description: 'The invitation token to verify',
    example: '550e8400-e29b-41d4-a716-446655440000',
  })
  @IsString()
  @IsNotEmpty()
  token!: string;
}

/* ======================================================
   10. RESEND INVITATION REQUEST
    - Public DTO for resending an invitation
====================================================== */
export class ResendInvitationRequestDto {
  @ApiProperty({
    description: 'The ID of the invitation to resend',
    example: 'inv_123456',
  })
  @IsString()
  @IsNotEmpty()
  invitationId!: string;
}

/* ======================================================
   11. RESEND INVITATION GRPC REQUEST (Profile Service)
    - Internal gRPC DTO for resending invitations
    - Extends public DTO and adds admin context from JWT
====================================================== */
export class ResendInvitationGrpcRequestDto extends ResendInvitationRequestDto {
  @ApiProperty({
    description: 'UUID of the admin requesting the resend (extracted from JWT)',
    example: 'a7164466-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  requestedByUserUuid!: string;

  @ApiProperty({
    description: 'UUID of the organization (extracted from JWT context)',
    example: 'd9b2b1c0-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  organizationUuid!: string;
}

/* ======================================================
   12. CANCEL INVITATION REQUEST
    - Public DTO for cancelling an invitation
====================================================== */
export class CancelInvitationRequestDto {
  @ApiProperty({
    description: 'The ID of the invitation to cancel',
    example: 'inv_123456',
  })
  @IsString()
  @IsNotEmpty()
  invitationId!: string;
}

/* ======================================================
   13. CANCEL INVITATION GRPC REQUEST (Profile Service)
    - Internal gRPC DTO for cancelling invitations
====================================================== */
export class CancelInvitationGrpcRequestDto extends CancelInvitationRequestDto {
  @ApiProperty({
    description: 'UUID of the admin requesting the cancellation (extracted from JWT)',
    example: 'a7164466-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  requestedByUserUuid!: string;

  @ApiProperty({
    description: 'UUID of the organization (extracted from JWT context)',
    example: 'd9b2b1c0-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  organizationUuid!: string;
}

/* ======================================================
   14. GET ORGANIZATION INVITATIONS REQUEST
    - Used to fetch pending invitations for an organization
====================================================== */
export class GetOrganizationInvitationsRequestDto {
  @ApiProperty({
    description: 'UUID of the organization',
    example: 'd9b2b1c0-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  organizationUuid!: string;

  @ApiProperty({
    description: 'UUID of the admin requesting (for permission check)',
    example: 'a7164466-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  requestingUserUuid!: string;
}

/* ======================================================
   15. CHECK INVITATION STATUS REQUEST
    - Used to quickly check if an email has a pending invitation
====================================================== */
export class CheckInvitationStatusRequestDto {
  @ApiProperty({
    description: 'Email to check',
    example: 'user@example.com',
  })
  @IsEmail()
  @IsNotEmpty()
  email!: string;

  @ApiProperty({
    description: 'UUID of the organization',
    example: 'd9b2b1c0-1234-4a5b-8c9d-0123456789ab',
  })
  @IsUUID()
  @IsNotEmpty()
  organizationUuid!: string;
}

/* ======================================================
   16. ORGANIZATION SERVICE PROVIDER ONBOARDING
====================================================== */

/**
 * Public Gateway DTO: Used by the Organization Admin.
 * orgUuid is usually pulled from the context or parameters.
 */
export class OnboardOrganizationProviderRequestDto {
  @ApiProperty({ 
    description: 'List of professional services the organization offers',
    example: ['Commercial Cleaning', 'Industrial Security', 'Waste Management'] 
  })
  @IsArray()
  @IsString({ each: true })
  @IsNotEmpty({ each: true })
  specialties!: string[];

  @ApiProperty({ 
    description: 'Regions or cities where the organization operates',
    example: ['Nairobi', 'Mombasa', 'Kisumu'] 
  })
  @IsArray()
  @IsString({ each: true })
  @IsNotEmpty({ each: true })
  serviceAreas!: string[];
}

/**
 * Internal / gRPC DTO: The command sent to OrganisationService.
 */
export class OnboardOrgProviderGrpcRequestDto extends OnboardOrganizationProviderRequestDto {
  @ApiProperty({ 
    description: 'The unique identifier of the organization becoming a provider' 
  })
  @IsUUID()
  @IsNotEmpty()
  orgUuid!: string;
}

/* ======================================================
   SETUP PASSWORD REQUEST DTO
   - For users who accepted an invitation to set their password
====================================================== */
export class SetupPasswordRequestDto {
  @ApiProperty({
    description: 'The password setup token sent via email',
    example: '550e8400-e29b-41d4-a716-446655440000',
  })
  @IsString()
  @IsNotEmpty()
  token!: string;

  @ApiProperty({
    description: 'New password for the account',
    example: 'StrongPass@123',
    minLength: 8,
  })
  @IsString()
  @IsNotEmpty()
  @MinLength(8)
  password!: string;

  @ApiProperty({
    description: 'Confirm password',
    example: 'StrongPass@123',
  })
  @IsString()
  @IsNotEmpty()
  @MinLength(8)
  confirmPassword!: string;
}

/* ======================================================
   CHECK PASSWORD SETUP STATUS RESPONSE DTO
====================================================== */
export class CheckPasswordSetupStatusResponseDto {
  @ApiProperty({
    description: 'Whether the token is valid',
    example: true,
  })
  isValid!: boolean;

  @ApiPropertyOptional({
    description: 'Email associated with the token',
    example: 'user@example.com',
  })
  email?: string;

  @ApiPropertyOptional({
    description: 'When the token expires',
    example: '2026-03-01T12:00:00Z',
  })
  expiresAt?: string;
}